2012-02-04  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* vftovp.ch: Allow arbitrarily large TFM files as in TFtoPL.

2012-02-01  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* tex.ch, gftodvi.ch: Ensure dvi file size < 2GB.
	* mf.ch: Ensure gf file size < 2GB.

	* tftopl.ch: Remove unused constant tfm_size.

2012-01-24  Karl Berry  <karl@tug.org>

	* doc/web2c.texi (Common options): remove doc for the long-since
	removed option -oem.  Report from peb.

2012-01-24  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* pltotf.ch, vptovf.ch: Interpret "--" as "+", not "-".

2012-01-22  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* tftopl.ch, vftovp.ch: Add missing space in error message.

2012-01-18  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* configure.ac: Check sizeof(off_t).
	* w2c/config.h: Define LONGINTEGER_TYPE and LONGINTEGER_PRId.

2011-12-23  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* configure.ac [OTANGLE]: For ovf2ovp and ovp2ovf (Web2C).

2011-12-08  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* tex.ch: Consistency of `constants'.

2011-10-18  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* configure.ac [WIN32]: Add `-lgdi32' to POPPLER_LIBS.

2011-10-07  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* texmfmp.h (ENABLE_PIPES): New macro for pipe support.

2011-10-06  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* configure.ac: Add poppler feature tests for luaTeX.

2011-10-04  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* am/web.am (DISTCLEANFILES): Preserve distributed files.

	* Makefile.am (DISTCLEANFILES): Add CXXLD.sh.
	* am/texmf.am (DISTCLEANFILES): Add write18-quote.log.
	* am/web.am (DISTCLEANFILES): Add longline.{aux,bbl,bib,blg}.

2011-09-30  Peter Breitenlohner  <peb@mp.mpg.de>

	* tex.ch (print_file_line): Bug fix: avoid uninitialized lineno.
	Patch and discussion from Karl, 21 Sep 2011 16:05:09 GMT.

2011-09-11  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* texmfmp-help.h: The option -kanji-internal=STRING is effective
	also for pTeX and epTeX.
