@@ -192,7 +192,7 @@
 @define procedure uexit ();
 @define procedure vgetc ();
 @define procedure write ();
-@define procedure writechunk ();
+@define procedure writedvi ();
 @define procedure writeln ();
 @define procedure xfclose ();
 @define procedure xfseek ();
